// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService should return a error when there is no network 1`] = `
Object {
  "data": undefined,
  "errors": Object {
    "status": 404,
    "statusText": "Not Found",
  },
}
`;

exports[`AuthService should return a token when user login 1`] = `
Object {
  "data": Object {
    "token": "token",
  },
  "errors": null,
}
`;

exports[`AuthService should return a user when user register 1`] = `
Object {
  "data": Object {
    "email": "email@test.com",
    "name": "name",
    "password": "123",
  },
  "errors": null,
}
`;
